Calling myself a Software Developer nowadays

--- a/cv.html
+++ b/cv.html
@@ -6,7 +6,7 @@ permalink: /cv/
 <section class="cv-section cv-card h-card" itemscope itemtype="http://schema.org/Person">
     <header class="cv-card__header">
         <h1 class="cv-card__name p-name" itemprop="name">David Goss</h1>
-        <h2 class="cv-card__title p-job-title" itemprop="jobTitle"><span>Front-End Developer</span></h2>
+        <h2 class="cv-card__title p-job-title" itemprop="jobTitle"><span>Software Developer</span></h2>
     </header>
     <dl class="cv-card__contact">
         <dt>Email</dt>
