switch to nunjucks templating

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="en">
-{% include head %}
+{% include head.njk %}
 <body class="home-page">
 <a href="/" class="site-logo">David Goss</a>
 <main class="main" role="main">
@@ -12,6 +12,6 @@
         <p>There's a bit about me (and this site) <a href="/about/">here</a>. You can also find me on <a href="https://twitter.com/davidjgoss">Twitter</a> and <a href="https://github.com/davidjgoss">GitHub</a>.</p>
     </section>
 </main>
-{% include footer %}
+{% include footer.njk %}
 </body>
 </html>
