--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
 <main class="main" role="main">
     <section class="site-intro">
         <p>I'm <strong>David</strong>, a software engineer from the UK.</p>
-
-        <p>Most recently, I wrote about {% for post in site.categories.blog limit:1 %}<a href="{{ post.url }}">{{ post.latest }}</a>{% endfor %}. There are <a href="/blog">other articles</a> too.</p>
-
+        <p>Most recently, I wrote about {% for post in collections.posts limit:1 %}<a href="{{ post.url }}">{{ post.data.latest }}</a>{% endfor %}. There are <a href="/blog">other articles</a> too.</p>
         <p>There's a bit about me (and this site) <a href="/about/">here</a>. You can also find me on <a href="https://twitter.com/davidjgoss">Twitter</a> and <a href="https://github.com/davidjgoss">GitHub</a>.</p>
     </section>
 </main>
